# brightsmith

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: adversarial-auditor.md  bcbs239-auditor.md  cab-agent.md  cde-tagger.md  chaos-monkey.md  content-strategist.md  data-analyst.md  data-steward.md  doc-generator.md  domain-context.md  dq-engineer.md  dq-rule-writer.md  entity-resolver.md  governance-reviewer.md  insight-manager.md  lineage-tracker.md  mcp-engineer.md  pii-scanner.md  policy-engineer.md  principal-data-architect.md  semantic-modeler.md  setup.md  staff-engineer.md  temporal-modeler.md  web-designer.md
agents/: adversarial-auditor.md  cab-agent.md  cde-tagger.md  chaos-monkey.md  content-strategist.md  data-analyst.md  data-steward.md  doc-generator.md  domain-context.md  dq-engineer.md  entity-resolver.md  governance-reviewer.md  pii-scanner.md  policy-engineer.md  principal-data-architect.md  setup.md  staff-engineer.md  temporal-modeler.md  web-designer.md
docs/: deepagents-integration-guide.md
docs/sessions/: 2026-03-17-17-00-session.md  2026-03-18-22-15-session.md  2026-03-19-00-00-session.md  2026-03-19-01-00-session.md  2026-03-20-17-46-session.md  2026-03-20-17-50-session.md  2026-03-25-12-00-session.md  2026-03-25-13-00-session.md  2026-03-25-14-00-session.md  2026-03-26-session.md  2026-03-29-15-14-session.md  (+3 more)
domain/: manifest.yaml.example
glossaries/: registry.yaml.example
hooks/: hooks.json  require-subagent-type.sh
src/: config.py  domain_loader.py
(+196 files in other folders)
